# rust-workspace

./: readme.md
workspace/: .gitignore  Cargo.toml  readme.md
workspace-nightly/: Cargo.toml
workspace-nightly/rocket_web_server/src/: main.rs
workspace-stable/: Cargo.toml
workspace-stable/basic_playground/src/: closures.rs  find_and_show.rs  main.rs  unwrap_family.rs
workspace-stable/hello_macro/src/: lib.rs
workspace-stable/hello_macro_derive/: Cargo.toml
workspace-stable/hello_macro_derive/src/: lib.rs
workspace-stable/read_files/: Cargo.toml
workspace-stable/read_files/src/: main.rs
workspace-stable/rust_basics/src/: arrays.rs  largest_number.rs  loops.rs  main.rs  pointer_ref.rs  static_dispatch.rs  structures.rs  vectors.rs
workspace-stable/split_str_lib/src/: lib.rs
workspace-stable/std_adventure/: Cargo.toml
workspace-stable/std_adventure/src/: main.rs  ownership.rs  reference_and_borrowing.rs
workspace-stable/tokio-tut/: Cargo.toml
workspace-stable/tokio-tut/src/: main.rs
workspace-stable/triangle/: Cargo.toml
workspace-stable/triangle/src/: main.rs
workspace/BasicPlayground/: Cargo.toml
workspace/BasicPlayground/src/: slices.rs
workspace/algorithms/: Cargo.toml
workspace/basic_playground/: Cargo.toml
workspace/hello_macro/: Cargo.toml
workspace/pancakes/: Cargo.toml
workspace/rocket_web_server/: Cargo.toml
workspace/rocket_web_server/src/: main.rs
workspace/rust_basics/: Cargo.toml
workspace/split_str_lib/: Cargo.toml
workspace/triangle/src/: main.rs
workspace/witter_backend/: Cargo.toml
workspace/witter_backend/src/: main.rs
(+17 files in other folders)
