[package]
authors = ["norbert gajda <norbert.gajda@gmail.com>"]
edition = "2021"
name = "rocket_web_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["json"]}
rusqlite = {version = "0.27.0", features = ["bundled"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
