[package]
authors = ["norbert gajda <norbert.gajda@gmail.com>"]
edition = "2018"
name = "witter_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.3", features = ["attributes", "unstable"]}
chrono = "0.4.15"
dotenv = "0.15.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
sqlx = {version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "uuid", "postgres"]}
thiserror = "1.0.20"
tide = "0.13.0"
uuid = "0.8.1"
